--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="About - Emergency Alert System" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -89,12 +90,15 @@
                   class="navigation-links-nav navigation-links-root-class-name11"
                 >
                   <span class="navigation-links-text navbar-link">
-                    <span>Latest News</span>
+                    <span>Latest Alerts</span>
                   </span>
-                  <span class="navigation-links-text1 navbar-link">
+                  <a
+                    href="about.html"
+                    class="navigation-links-navlink navbar-link"
+                  >
                     <span>About</span>
-                  </span>
-                  <span class="navigation-links-text2 navbar-link">
+                  </a>
+                  <span class="navigation-links-text1 navbar-link">
                     <span></span>
                   </span>
                 </nav>
@@ -139,18 +143,16 @@
               class="navigation-links-nav navigation-links-root-class-name10"
             >
               <span class="navigation-links-text navbar-link">
-                <span>Latest News</span>
+                <span>Latest Alerts</span>
               </span>
-              <span class="navigation-links-text1 navbar-link">
+              <a href="about.html" class="navigation-links-navlink navbar-link">
                 <span>About</span>
-              </span>
-              <span class="navigation-links-text2 navbar-link">
+              </a>
+              <span class="navigation-links-text1 navbar-link">
                 <span></span>
               </span>
             </nav>
-            <button class="navbar-primary-btn1 button-primary button">
-              <span>Donate</span>
-            </button>
+            <button class="navbar-button button"><span>Donate</span></button>
           </header>
         </div>
         <main class="home-main">
@@ -193,21 +195,19 @@
             <div class="home-max-width1 max-content-container">
               <img
                 alt="image"
-                src="public/playground_assets/ff1-500w.png"
+                src="public/playground_assets/ff1%20%5B2%5D-400h.png"
                 class="home-image1"
               />
               <div class="home-content-container1">
                 <ul class="home-ul1 list">
                   <li class="list-item">
-                    <span>Forest fire @ Northern California, US</span>
-                  </li>
-                  <li class="list-item">
                     <span>
-                      <span>846000 acres</span>
+                      <span>Forest fires @ Indonesia</span>
                       <br />
                       <br />
                     </span>
                   </li>
+                  <li class="list-item"></li>
                   <li class="list-item">
                     <span>
                       <span>01:39:02 UTC</span>
@@ -295,7 +295,7 @@
                   d="M646.266 309.242c-5.062 0-10.196-1.29-14.894-4.002-14.274-8.242-19.164-26.494-10.924-40.766l89.534-155.070c8.24-14.274 26.492-19.166 40.766-10.922 14.274 8.242 19.164 26.494 10.924 40.766l-89.532 155.070c-5.53 9.57-15.56 14.924-25.874 14.924z"
                 ></path>
               </svg>
-              <span class="home-text37">
+              <span class="home-text36">
                 <span>Loading more alerts...</span>
                 <br />
               </span>
