--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 
 <html lang="en">
   <head>
-    <title>Emergency Alert System</title>
-    <meta property="og:title" content="Emergency Alert System" />
+    <title>Disaster Alert Website</title>
+    <meta property="og:title" content="Disaster Alert Website" />
     <meta property="twitter:card" content="summary_large_image" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta property="og:title" content="About - Emergency Alert System" />
+    <meta property="og:title" content="About - Disaster Alert Website" />
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
@@ -92,13 +92,10 @@
                   <span class="navigation-links-text navbar-link">
                     <span>Latest Alerts</span>
                   </span>
-                  <a
-                    href="about.html"
-                    class="navigation-links-navlink navbar-link"
-                  >
-                    <span>About</span>
-                  </a>
                   <span class="navigation-links-text1 navbar-link">
+                    <span>About</span>
+                  </span>
+                  <span class="navigation-links-text2 navbar-link">
                     <span></span>
                   </span>
                 </nav>
@@ -145,10 +142,10 @@
               <span class="navigation-links-text navbar-link">
                 <span>Latest Alerts</span>
               </span>
-              <a href="about.html" class="navigation-links-navlink navbar-link">
-                <span>About</span>
-              </a>
               <span class="navigation-links-text1 navbar-link">
+                <span>About</span>
+              </span>
+              <span class="navigation-links-text2 navbar-link">
                 <span></span>
               </span>
             </nav>
