--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
+    <div>Link to digital portfolio: https://ryanneozx.github.io/digital-portfolio/</div>
     <!-- Script to switch theme using button -->
-    <script src="https://cdn.jsdelivr.net/npm/theme-change@2.0.2/index.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
